# bms

./: CMakeLists.txt  README.md  main.cpp
include/: BatteryManagementSystem.h  BatteryModel.h
src/: BatteryManagementSystem.cpp  BatteryModel.cpp
